added topic_math folder

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/main_math.PNG" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Magna</h2>
+									<a href="topic_math/math.html">
+										<h2>Math</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>My Mathematical Notes</p>
 										</div>
 									</a>
 								</article>
