Added notes on plausibly exogenous to topic of econometrics.

--- a/index.html
+++ b/index.html
@@ -187,17 +187,26 @@
 										</li>
 										<li>
 											<span class="opener">Econometrics</span>
+										<ul>
+											<li><a href="../topic_econometrics/validity_of_instruments.html">Validity of Instruments</a></li>
+											<li><a href="../topic_econometrics/plausibly_exogenous.html">Validity of Instruments</a></li>
+											<li><a href="#">Tempus Magna</a></li>
+											<li><a href="#">Feugiat Veroeros</a></li>
+										</ul>
+										</li>
+										<li>
+											<span class="opener">An Audiophile's Dreams</span>
 											<ul>
-												<li><a href="topic_econometrics/validity_of_instruments.html">Validity of Instruments</a></li>
+												<li><a href="#">Lorem Dolor</a></li>
 												<li><a href="#">Ipsum Adipiscing</a></li>
 												<li><a href="#">Tempus Magna</a></li>
 												<li><a href="#">Feugiat Veroeros</a></li>
 											</ul>
 										</li>
 										<li>
-											<span class="opener">An Audiophile's Dreams</span>
+											<span class="opener">My Notes</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
+												<li><a href="topic_mynotes/marketing.html">Marketing</a></li>
 												<li><a href="#">Ipsum Adipiscing</a></li>
 												<li><a href="#">Tempus Magna</a></li>
 												<li><a href="#">Feugiat Veroeros</a></li>
