Error in paths for some links.. Updated the paths.

--- a/topic_econometrics/validity_of_instruments.html
+++ b/topic_econometrics/validity_of_instruments.html
@@ -152,7 +152,7 @@
 										<span class="opener">Econometrics</span>
 										<ul>
 											<li><a href="../topic_econometrics/validity_of_instruments.html">Validity of Instruments</a></li>
-											<li><a href="../topic_econometrics/plausibly_exogenous.html">Validity of Instruments</a></li>
+											<li><a href="../topic_econometrics/plausibly_exogenous.html">Plausibly Exogenous</a></li>
 											<li><a href="#">Tempus Magna</a></li>
 											<li><a href="#">Feugiat Veroeros</a></li>
 										</ul>
