Added title to plausibly exogenous notes and also added a summary.

--- a/topic_econometrics/plausibly_exogenous.html
+++ b/topic_econometrics/plausibly_exogenous.html
@@ -35,13 +35,23 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Generic</h1>
+										<h1>Plausibly Exogenous</h1>
 									</header>
 
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 
+									
+									<hr class="major" />
+
+									<h2>Overview</h2>
 									<p>
-									The foundations of the 2 stage least squares (2SlS) method lies on the ability to find a valid instrument. Consider the following 2 stage model,
+										Notes from the paper by Conley et al (2011) on how we can relax the exclusion restriction requirement of the 2 stage least squares (2SLS) model by allowing
+										the validity of an instrument to be viewed as a tradeoff between the strength of the instrument and degree of violation of the exclusion restriction.
+									</p>>
+									<hr class="major" />
+
+									<p>
+									The foundations of the 2SLS method lies on the ability to find a valid instrument. Consider the following 2 stage model,
 									\begin{equation}
 									\begin{aligned}
 									y &= \beta^\intercal x_1 + \delta x_2 + \epsilon \\
