Corrected statement on exclusion restriction.

--- a/topic_econometrics/plausibly_exogenous.html
+++ b/topic_econometrics/plausibly_exogenous.html
@@ -67,7 +67,7 @@
 											\( \theta\ne 0 \), \(x_2\) must be explained by \(z\).
 										</li>
 									</ol>
-									When an instrument satisfies the above properties, it is also said to satisfy the <b>exclusion restriction</b> requirements.
+									When an instrument satisfies the first property, it is also said to satisfy the <b>exclusion restriction</b> requirement.
 									</p>
 
 									<p>
